# 3team_intermediate_project

./: .gitignore  README.md  app.py  baseline.ipynb  build_vector_db.py  context_builder.py  extract_tables_to_md.py  generate_answer.py  hwp_parsing.ipynb  initialize.py  main.py  main_web.py  preprocess.ipynb  pyproject.toml  rebuild_db.py  requirements.txt  retriever_hy+rerank.py
02.TextChunking/: README.md  embedding_evaluation.py  team_chunking.py
03.Embedding/: README.md  chunking.py  embedding_evaluation.py  rag_pipeline.py  rfp_retriever.py  text_parsing_1.py  vector_store.py
TextParsing/: README.md  app.py  create_vectordb.py  memory_store.py  rag_system.py  rerank_system.py  test_search.py  text_parsing.py  tts_worker.py
backup/: data copy.py
baseline/: 1. text_parsing.py  3+.retriever_mmr.py  hwp_parsing.ipynb
data/: evaluation_dataset.json  evaluation_dataset2.json  process_log.jsonl
docs/: ARCHITECTURE.md  ONNX_TTS.md  QWEN3_VL.md  VLLM.md  sqlite.md  tts_worker.md  vscode_debug.md
final_docs/: (사)벤처기업협회_2024년 벤처확인종합관리시스템 기능 고도화 용역사업 .md  (사)부산국제영화제_2024년 BIFF & ACFM 온라인서비스 재개발 및 행사지원시.md  (사）한국대학스포츠협의회_KUSF 체육특기자 경기기록 관리시스템 개발.md  (재)예술경영지원센터_통합 정보시스템 구축 사전 컨설팅.md  2025 구미 아시아육상경기선수권대회 조직위원회_2025 구미아시아육상경.md  BioIN_의료기기산업 종합정보시스템(정보관리기관) 기능개선 사업(2차).md  KOICA 전자조달_[긴급] [지문] [국제] 우즈베키스탄 열린 의정활동 상하원 .md  경기도 안양시_호계체육관 배드민턴장 및 탁구장 예약시스템 구축 용역.md  경기도 평택시_2024년도 평택시 버스정보시스템(BIS) 구축사업.md  경기도사회서비스원_2024년 통합사회정보시스템 운영지원.md  경상북도 봉화군_봉화군 재난통합관리시스템 고도화 사업(협상)(긴급).md  경희대학교_[입찰공고] 산학협력단 정보시스템 운영 용역업체 선정.md  고려대학교_차세대 포털·학사 정보시스템 구축사업.md  고양도시관리공사_관산근린공원 다목적구장 홈페이지 및 회원 통합운영.md  광주과학기술원_실시간통합연구비관리시스템(RCMS)  연계 모듈 변경 사업.md  광주과학기술원_학사시스템 기능개선 사업.md  국가과학기술지식정보서비스_통합정보시스템 고도화 용역.md  국가철도공단_철도인프라 디지털트윈 정보화전략계획(ISP) 수립 용역(변.md  국립인천해양박물관_국립인천해양박물관 해양자료관리시스템 구축 용.md  국립중앙의료원_(긴급)「2024년도 차세대 응급의료 상황관리시스템 구축.md  국민연금공단_2024년 이러닝시스템 운영 용역.md  국민연금공단_사업장 사회보험료 지원 고시 개정에 따른 정보시스템 보.md  국방과학연구소_기록관리시스템 통합 활용 및 보안 환경 구축.md  (+77 more)
hwp_to_pdf_to_md/: hwp_to_pdf.py  (+2 more)
(+245 files in other folders)
